finished image default and fixed port error

--- a/Projet Web Commerce/Views/Home/Index.cshtml
+++ b/Projet Web Commerce/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <head>
-        <meta http-equiv="refresh" content="0; url=https://localhost:7160/MainMenu" />
+        <meta http-equiv="refresh" content="0; url=/MainMenu" />
     </head>
 }
 else
 {
     <head>
-        <meta http-equiv="refresh" content="0; url=https://localhost:7160/MainMenu" />
+        <meta http-equiv="refresh" content="0; url=/MainMenu" />
     </head>
 }
