triage et fonction de recherche

--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Register.cshtml
@@ -39,6 +39,11 @@
         <section>
             <h3>Devenir un vendeur?</h3>
             <a asp-area="Identity" asp-page="/Account/RegisterVendeur">S'inscrire comme vendeur</a>
+            
+        </section>
+        <section>
+            <h3>Vous avez déjà un compte?</h3>
+            <a asp-area="Identity" asp-page="/Account/Login">Se connecter</a>
         </section>
     </div>
 </div>
