--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilVendeur.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilVendeur.cshtml
@@ -48,7 +48,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-floating mb-3">
-                    <input asp-for="Input.LivraisonGratuite" class="form-control" type="number" min="0.00" step="any" data-val="true" required />
+                    <input asp-for="Input.LivraisonGratuite" class="form-control" type="number" min="0" step="any" data-val="true" required />
                                             
                     <label asp-for="Input.LivraisonGratuite" class="form-label"></label>
                     <span asp-validation-for="Input.LivraisonGratuite" class="text-danger"></span>
@@ -84,7 +84,7 @@
             <div class="col-md-6">
                 <div class="form-floating mb-3">
                     <input asp-for="Input.Pourcentage" class="form-control" value="@Model.Input.Pourcentage" disabled/>
-                    <label asp-for="Input.Pourcentage" class="form-label"></label>
+                    <label asp-for="Input.Pourcentage" class="form-label">Taux de redevance (%)</label>
                     @* <span asp-validation-for="Input.Pourcentage" class="text-danger"></span> *@
                 </div>
             </div>
