--- a/Projet Web Commerce/Views/Panier/Index.cshtml
+++ b/Projet Web Commerce/Views/Panier/Index.cshtml
@@ -1,2 +1,13 @@
-﻿@{
-}
+﻿@model Projet_Web_Commerce.Models.ModelCatalogue
+
+<div class="row">
+    <div class="col-md-4">
+        @foreach (PPArticlesEnPanier articles in ViewBag.Panier)
+        {
+            PPVendeurs vendeur = Model.VendeursList.Where(p => p.NoVendeur == articles.NoVendeur).FirstOrDefault();
+            <div class="row">
+                <p>@articles.PPProduits.Description</p>
+            </div>
+        }
+    </div>
+</div>
