--- a/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
@@ -33,6 +33,9 @@
                 <p id="nom" class="nav-link" style="color: rgb(249, 229, 71)">Bonjour @prenom @nom!</p>
             </li>
         }
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Paniers" asp-action="Index" style="color: rgb(249, 229, 71)">Paniers</a>
+        </li>
     <li class="nav-item">
             @if ((estDansRole = await UserManager.IsInRoleAsync(user, "Client")))
         {
